--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@
 */
 
 /* COLORS
-    - navbar             #498096
-    - assessment tabs    #4A7C59
+    - navbar             #1C4559
+    - background         #95A8B1
+    - tabs               #7BAE7F
     - borders            #596157
     - tab text           #C8D5B9
-    -                    #52414C
 */
 
 /* FONTS
@@ -25,10 +25,35 @@
 /*  ===GLOBAL STYLES===  */
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #95A8B1;
 }
 
 nav {
-    background-color: #498096;
+    background-color: #1C4559;
+    height: 75px;
+}
+
+
+.navbar-brand {
+    font-weight: bold;
+}
+
+#navbar-about-a {
+    color: #C8D5B9;
+}
+
+#navbar-about-a > img {
+    width: 30px;
+    height: 30px;
+}
+
+#navbar-assessment-a {
+    display: none;
+    color: #C8D5B9;
+}
+
+#navbar-login-a {
+    color: #C8D5B9;
 }
 
 .spacing-container {
@@ -53,6 +78,11 @@ nav {
     display: block;
 }
 
+.btn-primary {
+	background-color: #7BAE7F;
+	border-color: #7BAE7F;
+}
+
 /*  ===PAGES===  */
 #about {
     width: 800px;
@@ -60,6 +90,7 @@ nav {
 
 #assessment {
     display: none;
+    margin-top: 60px;
 }
 
 #login {
@@ -110,8 +141,8 @@ nav {
 
 .nav-tabs .nav-link {
     border: 1px solid #596157;
-    background: #4A7C59;
-    color: #C8D5B9;
+    background: #7BAE7F;
+    color: white;
 }
 
 .nav-tabs .nav-link.active {
@@ -123,6 +154,8 @@ nav {
     border-left: 1px solid #596157;
     border-bottom: 1px solid #596157;
     border-right: 1px solid #596157;
+    border-radius: 0 0 5px 5px;
+    background-color: white;
 }
 
 .assessmentContinue {
@@ -264,5 +297,65 @@ nav {
 #ifEveryoneWasLikeYouHeader {
     text-align: center;
     margin: 20px 0;
+}
+
+/* Goals Tab */
+
+.circle {
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+}
+
+.circle>p {
+    text-align: center;
+    font-size: .7rem;
+}
+
+#eiffelBadge {
+    background: #B1BFC6;
+}
+
+#eiffelBadge>img {
+    margin-left: 35px;
+    width: 50px;
+    margin-right: 35px;
+    margin-top: 5px;
+}
+
+#nationalBadge {
+    background: #7B9F86;
+}
+
+#nationalBadge>img {
+    margin-left: 25px;
+    width: 70px;
+    margin-right: 25px;
+    margin-top: 5px;
+}
+
+#transBadge {
+    background: #7B9F86;
+}
+
+#transBadge>img {
+    margin-left: 25px;
+    width: 70px;
+    margin-right: 25px;
+    margin-top: 5px;
+}
+
+#paris-presets {
+    display: none;
+}
+
+#average-presets {
+    display: none;
+}
+
+#custom-goals {
+    display: none;
 }
 
